--- a/itis3135/styles/c.css
+++ b/itis3135/styles/c.css
@@ -5,21 +5,21 @@ body{
 h1{
     font-family: 'Lato', sans-serif;
     text-align: center;
-    margin-top: 1;
+    margin-top: 1px;
     
 }
 
 header{
     font-family: 'Lato', sans-serif;
     text-align: center;
-    margin-top: 1;
+    margin-top: 1px;
 
 }
 
 h2{
     font-family: 'Lato', sans-serif;
     text-align: center;
-    margin-top: 1;
+    margin-top: 1px;
     padding-top: 20px;
 }
 
@@ -46,7 +46,7 @@ footer{
     text-align: center;
     list-style-position: inside;
     margin: 0 auto;
-    padding: auto;
+    
   }
 
   h3{
