--- a/itis3135/styles/b.css
+++ b/itis3135/styles/b.css
@@ -5,21 +5,21 @@ body{
 h1{
     font-family: 'Lato', sans-serif;
     text-align: center;
-    margin-top: 1;
+    margin-top: 1px;
     
 }
 
 header{
     font-family: 'Lato', sans-serif;
     text-align: center;
-    margin-top: 1;
+    margin-top: 1px;
 
 }
 
 h2{
     font-family: 'Lato', sans-serif;
     text-align: center;
-    margin-top: 1;
+    margin-top: 1px;
     padding-top: 20px;
 }
 
