--- a/itis3135/styles/b.css
+++ b/itis3135/styles/b.css
@@ -1,45 +1,76 @@
-body{
+body {
     background-color: lightblue;
 }
 
-h1{
-    font-family: 'Lato', sans-serif;
-    text-align: center;
-    margin-top: 1px;
-    
-}
-
-header{
+h1 {
     font-family: 'Lato', sans-serif;
     text-align: center;
     margin-top: 1px;
 
 }
 
-h2{
+header {
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+    margin-top: 1px;
+
+}
+
+h2 {
     font-family: 'Lato', sans-serif;
     text-align: center;
     margin-top: 1px;
     padding-top: 20px;
 }
 
-p{
+p {
+
+    text-align: center;
+}
+
+footer {
     font-family: 'Lato', sans-serif;
     text-align: center;
 }
 
-footer{
-    font-family: 'Lato', sans-serif;
-    text-align:center;
+
+a {
+    color: yellow;
+}
+
+a:visited {
+    color: black;
 }
 
 
-  a{
-    color: yellow;
-  }
 
-  a:visited{
-    color: black;
-  }
 
- 
+
+.italic-text {
+    font-style: italic;
+}
+
+#introduction-image {
+    max-width: 100%;
+    height: auto;
+    max-height: 400px;
+    display: block;
+    margin: 0 auto;
+
+}
+
+figcaption {
+    text-align: center;
+    padding-top: 10px;
+    font-style: italic;
+}
+
+h3 {
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+}
+
+ul {
+    text-align: center;
+    margin: 1px;
+}
