--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -14,4 +14,6 @@
       </nav>
       <nav>
         <a href="stuff/CRAPPY%20WEBSITE!.htm">CRAPPY Website</a>
+        ||
+        <a href="firstscripts.html">First Scripts</a>
       </nav>
