added about page/updated nav bar

--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -50,3 +50,5 @@
             "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href
           );
       </script>
+      <p><em>Where Your Vision Takes Shape Online!</em></p>
+     
