--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -16,4 +16,6 @@
         <a href="stuff/CRAPPY%20WEBSITE!.htm">CRAPPY Website</a>
         ||
         <a href="firstscripts.html">First Scripts</a>
+        ||
+        <a href="about.html">About</a>
       </nav>
