working on BYO Intro

--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -18,4 +18,6 @@
         <a href="firstscripts.html">First Scripts</a>
         ||
         <a href="about.html">About</a>
+        ||
+        <a href="byo_intro.html">BYO Intro</a>
       </nav>
