--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -35,6 +35,8 @@
         src="https://jigsaw.w3.org/css-validator/images/vcss"
         alt="Valid CSS!" />
 </a>
+<button type = "button" onclick = "document.querySelectorAll('link[rel=stylesheet]').forEach(function(e)	{e.setAttribute('href', '');});">No CSS</button>
+
 
 <script>
         document
