added project overview page and added to nav bar

--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -12,7 +12,7 @@
 <a href="https://www.codecademy.com/profiles/NathanielHayes">CodeAcademy</a>
 ||
 <a href="https://www.linkedin.com/in/nathanielhayes23/">LinkedIn<br /></a>
-<p>
+<p id="footer">
     Designed by: <a href="hayesdesigns.com/index.html">Hayes Designs</a>,
     <a
         href="https://www.freecodecamp.org/certification/NathanielHayes/responsive-web-design">Certified
@@ -52,5 +52,5 @@
             "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href
           );
       </script>
-      <p><em>Where Your Vision Takes Shape Online!</em></p>
+      <p id="footer"><em>Where Your Vision Takes Shape Online!</em></p>
      
