--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -20,4 +20,6 @@
         <a href="about.html">About</a>
         ||
         <a href="byo_intro.html">BYO Intro</a>
+        ||
+        <a href="project_overview.html">Project Overview</a>
       </nav>
