--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -35,7 +35,7 @@
         src="https://jigsaw.w3.org/css-validator/images/vcss"
         alt="Valid CSS!" />
 </a>
-<button type = "button" onclick = "document.querySelectorAll('link[rel=stylesheet]').forEach(function(e)	{e.setAttribute('href', '');});">No CSS</button>
+<button type = "button" id="footer" onclick = "document.querySelectorAll('link[rel=stylesheet]').forEach(function(e)	{e.setAttribute('href', '');});">No CSS</button>
 
 
 <script>
