--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -22,4 +22,8 @@
         <a href="byo_intro.html">BYO Intro</a>
         ||
         <a href="project_overview.html">Project Overview</a>
+        ||
+        <a href="calculator_try.html">Calculator Try</a>
+        ||
+        <a href="calculator_fcc.html">Calculator FCC</a>
       </nav>
