--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -11,10 +11,10 @@
         <a href="forms.html">Form</a>
         ||
         <a href="website_evaluations.html">Website Evaluations</a>
+        ||
+        <a href="stuff/CRAPPY%20WEBSITE!.htm">CRAPPY Website</a>
       </nav>
       <nav>
-        <a href="stuff/CRAPPY%20WEBSITE!.htm">CRAPPY Website</a>
-        ||
         <a href="firstscripts.html">First Scripts</a>
         ||
         <a href="about.html">About</a>
@@ -26,4 +26,6 @@
         <a href="calculator_try.html">Calculator Try</a>
         ||
         <a href="calculator_fcc.html">Calculator FCC</a>
+        ||
+        <a href="arrays.html">Arrays</a>
       </nav>
