--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -28,4 +28,6 @@
         <a href="calculator_fcc.html">Calculator FCC</a>
         ||
         <a href="arrays.html">Arrays</a>
+        ||
+        <a href="hobby\index.html">Hobby</a>
       </nav>
