--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -5,7 +5,7 @@
 <a href="https://deniablesole.github.io/">GitHub.io</a>
 ||
 <a
-    href="https://github.com/Deniablesole/Deniablesole.github.io/tree/main/itis3135">itis3135.io</a>
+  href="https://github.com/Deniablesole/Deniablesole.github.io/tree/main/itis3135">itis3135.io</a>
 ||
 <a href="https://www.freecodecamp.org/NathanielHayes">FreeCodeCamp</a>
 ||
@@ -13,30 +13,35 @@
 ||
 <a href="https://www.linkedin.com/in/nathanielhayes23/">LinkedIn<br /></a>
 <p id="footer">
-    Designed by: <a href="hayesdesigns.com/index.html">Hayes Designs</a>,
-    <a
-        href="https://www.freecodecamp.org/certification/NathanielHayes/responsive-web-design">Certified
-        in RWD</a>
-    © 2024<br />
+  Designed by: <a href="hayesdesigns.com/index.html">Hayes Designs</a>,
+  <a
+    href="https://www.freecodecamp.org/certification/NathanielHayes/responsive-web-design">Certified
+    in RWD</a>
+  © 2024<br />
 </p>
 <a
-    href="https://validator.w3.org/check?uri=referer"
-    id="validation_link_html">
-    <img
-        style="border: 0; width: 88px; height: 31px"
-        src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png"
-        alt="Valid HTML!" />
+  href="https://validator.w3.org/check?uri=referer"
+  id="validation_link_html">
+  <img
+    style="border: 0; width: 88px; height: 31px"
+    src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png"
+    alt="Valid HTML!" />
 </a>
 <a
-    href="https://jigsaw.w3.org/css-validator/check/referer"
-    id="validation_link_css">
-    <img
-        style="border: 0; width: 88px; height: 31px"
-        src="https://jigsaw.w3.org/css-validator/images/vcss"
-        alt="Valid CSS!" />
+  href="https://jigsaw.w3.org/css-validator/check/referer"
+  id="validation_link_css">
+  <img
+    style="border: 0; width: 88px; height: 31px"
+    src="https://jigsaw.w3.org/css-validator/images/vcss"
+    alt="Valid CSS!" />
 </a>
-<button type = "button" id="footer" onclick = "document.querySelectorAll('link[rel=stylesheet]').forEach(function(e)	{e.setAttribute('href', '');});">No CSS</button>
-
+<a href="https://wave.webaim.org/report#/ id="validation_link_disability"> <img
+    style="border:0;width:88px;height:31px"
+    src="images/button_validation_wcag.png"
+    alt="Valid Disabiliy/Accessibility Design!"> </a>
+<button type="button" id="footer"
+  onclick="document.querySelectorAll('link[rel=stylesheet]').forEach(function(e)	{e.setAttribute('href', '');});">No
+  CSS</button>
 
 <script>
         document
@@ -51,6 +56,6 @@
             "href",
             "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href
           );
+          document.getElementById("validation_link_disability").setAttribute("href","https://wave.webaim.org/report#/" + location.href);
       </script>
-      <p id="footer"><em>Where Your Vision Takes Shape Online!</em></p>
-     
+<p id="footer"><em>Where Your Vision Takes Shape Online!</em></p>
