--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -16,7 +16,7 @@
   Designed by: <a href="hayesdesigns.com/index.html">Hayes Designs</a>,
   <a
     href="https://www.freecodecamp.org/certification/NathanielHayes/responsive-web-design">Certified
-    in RWD</a>
+    in RWD,</a><a href="https://www.freecodecamp.org/certification/NathanielHayes/javascript-algorithms-and-data-structures-v8">JS</a>
   © 2024<br />
 </p>
 <a
