--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -30,4 +30,6 @@
         <a href="arrays.html">Arrays</a>
         ||
         <a href="hobby\index.html">Hobby</a>
+        ||
+        <a href="project\index.html">Project Home</a>
       </nav>
