--- a/itis3135/project/components/header.html
+++ b/itis3135/project/components/header.html
@@ -1,12 +1,23 @@
-<div class="container">
-    <h1>Learn Java</h1>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="modules.html">Modules</a></li>
-            <li><a href="resources.html">Resources</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="tos.html">Terms of Service</a></li>
-        </ul>
-    </nav>
-</div>
+<header>
+    <div class="container">
+        <h1>Learn Java</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">Modules</a>
+                    <div class="dropdown-content">
+                        <a href="variables_data_types.html">Variables and Data Types</a>
+                        <a href="control_structures.html">Control Structures</a>
+                        <a href="loops.html">Loops</a>
+                        <a href="methods.html">Methods</a>
+                        <a href="oop.html">Object Oriented Programming</a>
+                    </div>
+                </li>
+                <li><a href="resources.html">Resources</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="tos.html">Terms of Service</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
