--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -13,8 +13,7 @@
         <a href="website_evaluations.html">Website Evaluations</a>
         ||
         <a href="stuff/CRAPPY%20WEBSITE!.htm">CRAPPY Website</a>
-      </nav>
-      <nav>
+        ||
         <a href="firstscripts.html">First Scripts</a>
         ||
         <a href="about.html">About</a>
@@ -22,7 +21,8 @@
         <a href="byo_intro.html">BYO Intro</a>
         ||
         <a href="project_overview.html">Project Overview</a>
-        ||
+      </nav>
+      <nav>
         <a href="calculator_try.html">Calculator Try</a>
         ||
         <a href="calculator_fcc.html">Calculator FCC</a>
@@ -32,4 +32,8 @@
         <a href="hobby\index.html">Hobby</a>
         ||
         <a href="project\index.html">Project Home</a>
+        ||
+        <a href="review1.html">Review 1</a>
+        ||
+        <a href="review2.html">Review 2</a>
       </nav>
