working on client project.

--- a/itis3135/project/components/header.html
+++ b/itis3135/project/components/header.html
@@ -8,10 +8,10 @@
                     <a href="#" class="dropbtn">Modules</a>
                     <div class="dropdown-content">
                         <a href="variables_data_types.html">Variables and Data Types</a>
-                        <a href="control_structures.html">Control Structures</a>
-                        <a href="loops.html">Loops</a>
+                        <a href="control_structures.html">If/Else Statements</a>
+                        <a href="loops.html">Switch Statements</a>
                         <a href="methods.html">Methods</a>
-                        <a href="oop.html">Object Oriented Programming</a>
+                        <a href="oop.html">Loops</a>
                     </div>
                 </li>
                 <li><a href="resources.html">Resources</a></li>
