--- a/itis3135/project/components/header.html
+++ b/itis3135/project/components/header.html
@@ -7,11 +7,11 @@
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Modules</a>
                     <div class="dropdown-content">
-                        <a href="variables_data_types.html">Variables and Data Types</a>
-                        <a href="control_structures.html">If/Else Statements</a>
-                        <a href="loops.html">Switch Statements</a>
+                        <a href="variables_datatypes.html">Variables and Data Types</a>
+                        <a href="ifelse.html">If/Else Statements</a>
+                        <a href="switchstatements.html">Switch Statements</a>
                         <a href="methods.html">Methods</a>
-                        <a href="oop.html">Loops</a>
+                        <a href="loops.html">Loops</a>
                     </div>
                 </li>
                 <li><a href="resources.html">Resources</a></li>
