finished client project

--- a/itis3135/project/components/footer.html
+++ b/itis3135/project/components/footer.html
@@ -39,4 +39,5 @@
       </script>
 <div class="container">
     <p>&copy; 2024 Hayes Designs. All rights reserved.</p>
+    <p id="footer"><em>Where Your Vision Takes Shape Online!</em></p>
 </div>
